# normocontrol-offline

./: .gitignore  README.md  ИНСТРУКЦИЯ.md
normocontrol_offline/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  start.sh
normocontrol_offline/docs/: ARCHITECTURE.md  CROSS_PLATFORM.md  LIMITATIONS_RESOLUTION.md  MODELS.md  RU_REQUIREMENTS.md  SCHEMES_NOTES.md  USER_GUIDE.md
normocontrol_offline/normocontrol/: __init__.py  analyzer.py  cli.py  config.py  corrections.py  db.py  extractors.py  gui.py  launcher.py  learning.py  llm.py  native_app.py  references.py  service.py  webapp.py
normocontrol_offline/reports/second_round_20260616_clean/: evaluation_report.md  llm_outputs.json  llm_runs.csv
normocontrol_offline/scripts/: check_environment.py  run_evaluation.py
normocontrol_offline/tests/: test_core.py
Архивы для обучения/Плохие ИЭ/: ИЭ 1 TS10 24 23 Система дожигания водорода изм.2 (Восстановлен).doc  ИЭ 1 TV 24 33  заготовка.doc  ИЭ 1 UE 24.16   Система гидроиспытаний оборудования и продувки датчиков КИП пересмотр 2021.doc  ИЭ.1.TF.24.13 с изм.2 (Восстановлен).doc  ИЭ.1.TK90.24.28 заготовка.doc  ИЭ.1.TQ13,14.24.04  заготовка.doc  ИЭ.1.TS20.24.24 с изм 5.doc  ИЭ.1.TY.24.09 с изм.1-2.doc  ИЭ.2.TG.24.12 пересмотр 2024  изм.1.doc  (+1 more)
До и после изменений/: ИЭ.0.РТЗО.27.68 пересмотр 2025.docx  ИЭ.0.РТЗО.27.68 пересмотр 2026.docx  ИЭ.3.НКУ-РУ.27.142 пересмотр 2026.docx  ИЭ.3.НКУ-РУ.27.142_изм_3.docx  КУ.0.ТС ХВО 27.05 пересмотр 2023.docx  КУ.0.ТС ХВО.27.05 пересмотр 2026.docx
Схемы проекта/: описание_схем.md
(+15 files in other folders)
