[project]
name = "normocontrol-offline"
version = "0.1.0"
description = "Offline document norm-control assistant"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2",
    "PyMuPDF>=1.26",
    "pypdf>=5.0",
    "matplotlib>=3.10",
]

[project.scripts]
normocontrol = "normocontrol.cli:main"
normocontrol-app = "normocontrol.launcher:main"

[tool.setuptools.packages.find]
include = ["normocontrol*"]
